# $Id$

2007-07-23	Ivan Y. Khvostishkov

	* global.inc.php.tpl: possible security hole fixed on autoload's
	level.

2007-07-16	Konstantin V. Arkhipov

	* main/Base/RequestType.class.php,
	main/Criteria/FetchStrategy.class.php: immutable now.

2007-07-15	Konstantin V. Arkhipov

	* core/OSQL/DBField.class.php, core/OSQL/SelectField.class.php,
	core/Form/Primitives/ListedPrimitive.class.php: implemented in module.

	* core/OSQL/Castable.class.php: DialectString is a must now.

2007-07-13	Konstantin V. Arkhipov

	* core/OSQL/DatePart.class.php, core/OSQL/ExtractPart.class.php: ANSI
	SQL's EXTRACT() implemented.

2007-07-10	Ivan Y. Khvostishkov

	* main/Utils/IO/FileOutputStream.class.php: implemented.

	* main/Utils/Logging/: simple but useful classes for logging.

2007-07-10	Dmitry E. Pismenny

	* main/Utils/TextUtils.class.php: cutOnSpace now return string, which 
	cutted to needfull length, if there is no space after length.

2007-07-09	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now ignores null values.

2007-07-07	Konstantin V. Arkhipov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: resolveViewName now
	throws WrongArgumentException.

2007-07-06	Dmitry E. Pismenny

	* main/Flow/RedirectView.class.php: special handling for boolean
	values.

2007-07-06	Vladimir A. Altuchov

	* main/Base/TimestampRange.class.php: overloaded getStartStamp() and
	getEndStamp() for correct compare Timestamp object.

2007-07-05	Anton E. Lebedevich

	* main/Utils/TidyValidator.class.php: validationErrors renamed to
	messages, added getErrorCount() and getWarningCount().

2007-07-04	Anton E. Lebedevich

	* core/Logic/PostfixUnaryExpression.class.php: renamed from
	UnaryExpression.

	* core/Logic/PrefixUnaryExpression.class.php: implemented unary '-' and
	unary logical 'not'.

2007-07-04	Konstantin V. Arkhipov

	* core/Form/Filters/BaseFilter.class.php: now implements
	Instantiatable too.

2007-07-03	Konstantin V. Arkhipov
